--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,14 +1,12 @@
-<<<<<<< HEAD
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/test
 user=root
 pwd=root
 maxPoolSize=4
-=======
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test
-user=root
-pwd=root
-maxPoolSize=4
->>>>>>> 7ee670bf0cc1ac59660a062b013096b7a46d629f
-minPoolSize=1
+
+#driver=com.mysql.jdbc.Driver
+#url=jdbc:mysql://localhost:3306/test
+#user=root
+#pwd=root
+#maxPoolSize=4
+#minPoolSize=1
