--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -3,6 +3,7 @@ url=jdbc:mysql://localhost:3306/test
 user=root
 pwd=root
 maxPoolSize=4
+minPoolSize=1
 
 #driver=com.mysql.jdbc.Driver
 #url=jdbc:mysql://localhost:3306/test
