--- a/pom.xml
+++ b/pom.xml
@@ -225,5 +225,13 @@
             <version>3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.htmlparser</groupId>
+            <artifactId>htmlparser</artifactId>
+            <version>2.1</version>
+        </dependency>
+
+
+
     </dependencies>
 </project>
