--- a/pom.xml
+++ b/pom.xml
@@ -241,13 +241,20 @@
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
-            <version>3.3.6</version>
+            <version>3.4.6</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>com.101tec</groupId>-->
+            <!--<artifactId>zkclient</artifactId>-->
+            <!--<version>0.3</version>-->
+        <!--</dependency>-->
+
         <dependency>
-            <groupId>com.101tec</groupId>
+            <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
-            <version>0.3</version>
+            <version>0.1</version>
         </dependency>
+
     </dependencies>
 </project>
