--- a/pom.xml
+++ b/pom.xml
@@ -231,18 +231,18 @@
             <version>2.1</version>
         </dependency>
 
-        <!-- dubbo的使用 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>dubbo</artifactId>
-            <version>2.5.3</version>
-        </dependency>
+        <!-- dubbo的使用(3个包),dubbo版本太老,导致工程运行出错,jar包冲突 -->
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba</groupId>-->
+            <!--<artifactId>dubbo</artifactId>-->
+            <!--<version>2.5.3</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>3.4.6</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.zookeeper</groupId>-->
+            <!--<artifactId>zookeeper</artifactId>-->
+            <!--<version>3.4.6</version>-->
+        <!--</dependency>-->
 
         <!--<dependency>-->
             <!--<groupId>com.101tec</groupId>-->
@@ -250,11 +250,13 @@
             <!--<version>0.3</version>-->
         <!--</dependency>-->
 
+        <!--google guava-->
         <dependency>
-            <groupId>com.github.sgroschupf</groupId>
-            <artifactId>zkclient</artifactId>
-            <version>0.1</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
         </dependency>
+
 
     </dependencies>
 </project>
