--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,9 @@
 #config root logger
-log4j.rootLogger = INFO,system.out
+#INFO级别的,打日志
+log4j.rootLogger = DEBUG,system.out
 log4j.appender.system.out=org.apache.log4j.ConsoleAppender
 log4j.appender.system.out.layout=org.apache.log4j.PatternLayout
-log4j.appender.system.out.layout.ConversionPattern=MINAServer Logger-->%5p{%F:%L}-%m%n
+log4j.appender.system.out.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n
 
 #config this Project.file logger
 log4j.logger.thisProject.file=INFO,thisProject.file.out
@@ -18,6 +19,7 @@ log4j.appender.thisProject.file.out.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 #log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n
+
 #log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.R.File=/Users/zhengying/downloads/log
 #log4j.appender.R.layout=org.apache.log4j.PatternLayout
