--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 #config root logger
 #INFO级别的,打日志
-log4j.rootLogger = ERROR,system.out
+log4j.rootLogger = INFO,system.out
 log4j.appender.system.out=org.apache.log4j.ConsoleAppender
 log4j.appender.system.out.layout=org.apache.log4j.PatternLayout
 log4j.appender.system.out.layout.ConversionPattern=[test-mvc::%d]-->%5p{%F:%L}-%m%n
