--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,26 +1,26 @@
-#config root logger
-#INFO级别的,打日志
-log4j.rootLogger = INFO,system.out
-log4j.appender.system.out=org.apache.log4j.ConsoleAppender
-log4j.appender.system.out.layout=org.apache.log4j.PatternLayout
-log4j.appender.system.out.layout.ConversionPattern=[test-mvc::%d]-->%5p{%F:%L}-%m%n
-
-#config this Project.file logger
-log4j.logger.thisProject.file=INFO,thisProject.file.out
-log4j.appender.thisProject.file.out=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.thisProject.file.out.File=logContentFile.log
-log4j.appender.thisProject.file.out.layout=org.apache.log4j.PatternLayout
+##config root logger
+##INFO级别的,打日志
+#log4j.rootLogger = INFO,system.out
+#log4j.appender.system.out=org.apache.log4j.ConsoleAppender
+#log4j.appender.system.out.layout=org.apache.log4j.PatternLayout
+#log4j.appender.system.out.layout.ConversionPattern=[test-mvc::%d]-->%5p{%F:%L}-%m%n
+#
+##config this Project.file logger
+#log4j.logger.thisProject.file=INFO,thisProject.file.out
+#log4j.appender.thisProject.file.out=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.thisProject.file.out.File=logContentFile.log
+#log4j.appender.thisProject.file.out.layout=org.apache.log4j.PatternLayout
 
 
 
 
 #写入文件的方法.
-#log4j.rootLogger=INFO,R,stdout
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n
+log4j.rootLogger=ERROR,R,stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n
 
-#log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.R.File=/Users/zhengying/downloads/log
-#log4j.appender.R.layout=org.apache.log4j.PatternLayout
-#log4j.appender.R.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n
+log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.R.File=/Users/zhengying/downloads/log4j.log
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n
