--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,12 +15,13 @@
 
 
 #写入文件的方法.
-log4j.rootLogger=ERROR,R,stdout
+log4j.rootLogger=INFO,R,stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n
 
-log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.R.File=/Users/zhengying/downloads/log4j.log
+#log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.R=org.apache.log4j.FileAppender
+log4j.appender.R.File=/Users/zhengying/downloads/test2.log
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n
