reflect测试代码重构

--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -6,7 +6,7 @@ maxPoolSize=4
 minPoolSize=1
 
 #driver=com.mysql.jdbc.Driver
-#url=jdbc:mysql://localhost:3306/test
+#url=jdbc:mysql://localhost:3306/refactor
 #user=root
 #pwd=root
 #maxPoolSize=4
