--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@
 #log4j.rootLogger = INFO,system.out
 #log4j.appender.system.out=org.apache.log4j.ConsoleAppender
 #log4j.appender.system.out.layout=org.apache.log4j.PatternLayout
-#log4j.appender.system.out.layout.ConversionPattern=[test-mvc::%d]-->%5p{%F:%L}-%m%n
+#log4j.appender.system.out.layout.ConversionPattern=[refactor-mvc::%d]-->%5p{%F:%L}-%m%n
 #
 ##config this Project.file logger
 #log4j.logger.thisProject.file=INFO,thisProject.file.out
