--- a/pom.xml
+++ b/pom.xml
@@ -277,5 +277,12 @@
             <version>2.8.0</version>
         </dependency>
 
+        <!--apache mail-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 </project>
