--- a/pom.xml
+++ b/pom.xml
@@ -284,5 +284,12 @@
             <version>1.4</version>
         </dependency>
 
+        <!--ehcache-->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
     </dependencies>
 </project>
