--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,17 @@
             <version>1.6</version>
         </dependency>
 
+        <!--谷歌json解析包-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.2.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.7</version>
         </dependency>
 
         <!-- JSON乱码解决用到（3个） -->
