--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test
+url=jdbc:mysql://localhost:3306/testmysql
 user=root
-pwd=root
+pwd=1234
 maxPoolSize=4
 minPoolSize=1
 
