--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/testmysql
+url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
 user=root
 pwd=1234
 maxPoolSize=4
