--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,11 @@
             <version>3.6.4.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
 
     </dependencies>
 </project>
