springmvc js等静态资源请求出现的问题

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,9 +16,11 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>springmvc</servlet-name>
-        <url-pattern>/</url-pattern>
+        <!--<url-pattern>/</url-pattern>-->
+        <url-pattern>*.do</url-pattern>
     </servlet-mapping>
 
     <filter>
