--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://localhost:3306/zheng?useUnicode=true&characterEncoding=UTF-8
 user=root
-pwd=1234
+pwd=root
 maxPoolSize=4
 minPoolSize=1
 
